Updated breakout game layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- entire page -->
         <div class="outer">
             <!-- header1 container -->
-            <h1 class="flex-container">
+            <div class="flex-container header-row">
                 <div> 
                     Score: &nbsp;<span id="score"> 30</span> 
                 </div>
@@ -30,7 +30,7 @@
                      <img src="heart.png" width="30" height="30">
                      <img src="heart.png" width="30" height="30">
                 </div>
-            </h1>
+            </div>
             
             <!-- game board container -->
             <div>
