--- a/index.html
+++ b/index.html
@@ -35,69 +35,10 @@
             <!-- game board container -->
             <div>
                 <!-- grid container -->
-                <div class="grid">
-                    <!-- Row 1 -->
-                    <div class="box-item col1 row1"></div>
-                    <div class="box-item col2 row1"></div>
-                    <div class="box-item col3 row1"></div>
-                    <div class="box-item col4 row1"></div>
-                    <div class="box-item col5 row1"></div>
-                    <div class="box-item col6 row1"></div>
-                    <div class="box-item col7 row1"></div>
-                    <div class="box-item col8 row1"></div>
-                    <div class="box-item col9 row1"></div>
-                    <div class="box-item col10 row1"></div>
-                    <!-- Row 2 -->
-                    <div class="box-item col1 row2"></div>
-                    <div class="box-item col2 row2"></div>
-                    <div class="box-item col3 row2"></div>
-                    <div class="box-item col4 row2"></div>
-                    <div class="box-item col5 row2"></div>
-                    <div class="box-item col6 row2"></div>
-                    <div class="box-item col7 row2"></div>
-                    <div class="box-item col8 row2"></div>
-                    <div class="box-item col9 row2"></div>
-                    <div class="box-item col10 row2"></div>
-                    <!-- Row 3 -->
-                    <div class="box-item col1 row3"></div>
-                    <div class="box-item col2 row3"></div>
-                    <div class="box-item col3 row3"></div>
-                    <div class="box-item col4 row3"></div>
-                    <div class="box-item col5 row3"></div>
-                    <div class="box-item col6 row3"></div>
-                    <div class="box-item col7 row3"></div>
-                    <div class="box-item col8 row3"></div>
-                    <div class="box-item col9 row3"></div>
-                    <div class="box-item col10 row3"></div>
-                    <!-- Row 4 -->
-                    <div class="box-item col1 row4"></div>
-                    <div class="box-item col2 row4"></div>
-                    <div class="box-item col3 row4"></div>
-                    <div class="box-item col4 row4"></div>
-                    <div class="box-item col5 row4"></div>
-                    <div class="box-item col6 row4"></div>
-                    <div class="box-item col7 row4"></div>
-                    <div class="box-item col8 row4"></div>
-                    <div class="box-item col9 row4"></div>
-                    <div class="box-item col10 row4"></div>
-                    <!-- Row 5 -->
-                    <div class="box-item col1 row5"></div>
-                    <div class="box-item col2 row5"></div>
-                    <div class="box-item col3 row5"></div>
-                    <div class="box-item col4 row5"></div>
-                    <div class="box-item col5 row5"></div>
-                    <div class="box-item col6 row5"></div>
-                    <div class="box-item col7 row5"></div>
-                    <div class="box-item col8 row5"></div>
-                    <div class="box-item col9 row5"></div>
-                    <div class="box-item col10 row5"></div>
-
+                <div id="myDiv" class="grid">
                     <div class="ball"></div>
                     <div class="paddle"></div>
-
                 </div>
-
-
             </div>
                 
         </div>
