--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     Sound: <span id="sound">On</span>
                 </div>
                 <div id="hearts">
-                     <img src="heart.png" width="30" height="30">
-                     <img src="heart.png" width="30" height="30">
-                     <img src="heart.png" width="30" height="30">
+                     <img src="images/heart.svg" width="30" height="30">
+                     <img src="images/heart.svg" width="30" height="30">
+                     <img src="images/heart.svg" width="30" height="30">
                 </div>
             </div>
             
