added code to move paddle

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- game board container -->
             <div>
                 <!-- grid container -->
-                <div id="myDiv" class="grid">
+                <div id="blockContainer" class="grid">
                     <div class="ball"></div>
                     <div class="paddle"></div>
                 </div>
